Creando vistas con Angular Schematic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,1 @@
-<input type="text" [(ngModel)]="title">
-
-{{title}}
-
-<div *ngIf="title === 'nicolas'; then store else welcome">
-    este es un div
-</div>
-
-<ng-template #store>
-    Mostrando el store
-</ng-template>
-
-<ng-template #welcome>
-    Bienvenido a Platzi store
-</ng-template>
-
-<button (click)="addItem()">Add item</button>
-
-<ul>
-    <li *ngIf="items.length === 0">la lista esta vacía</li>
-    <li *ngFor="let name of items; index as i">
-        {{name}} {{i}}
-        <button (click)="deleteItem(i)">delete</button>
-    </li>
-</ul>
-
-
-<div *ngFor="let product of products">
-    {{product.title}}
-   <img [src]="product.image" alt="">
-   {{product.price  }}
-</div>
+<router-outlet></router-outlet>
