--- a/src/app/admin/components/products-list/products-list.component.html
+++ b/src/app/admin/components/products-list/products-list.component.html
@@ -1,6 +1,6 @@
 <a mat-raised-button routerLink="create">Crear nuevo producto</a>
 
-<table mat-table [dataSource]="product" class="mat-elevation-z8" products-table>
+<table mat-table [dataSource]="product" class="mat-elevation-z8 products-table">
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>ID</th>
         <td mat-cell *matCellDef="let product">{{product.id}}</td>
