--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -10,7 +10,7 @@
         <p>{{product.description | slice: 0:10}}</p>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button color="primary" (click)="addCart">Agregar al carrito</button>
+        <button mat-raised-button color="primary" (click)="addCart()">Agregar al carrito</button>
         <a mat-raised-button [routerLink]="['/products', product.id]">Ver detalles</a>
     </mat-card-actions>
 </mat-card>
