--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,28 +1,43 @@
-
-<form [formGroup]="form" (ngSubmit)="register($event)">
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>Registro</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <div class="row">
-        <div class="col-xs">
-          <mat-form-field>
-            <input placeholder="email" formControlName="email" matInput type="email">
-          </mat-form-field>
-        </div>
+<div class="login-root">
+  <div class="box-root flex-flex flex-direction--column" style="min-height: 100vh;flex-grow: 1;">
+    <div class="box-root padding-top--20 flex-flex flex-direction--column" style="flex-grow: 1; z-index: 9;">
+      <div class="box-root padding-bottom--24 flex-flex flex-justifyContent--center">
+        <h1>Registro</h1>
       </div>
-      <div class="row">
-        <div class="col-xs">
-          <mat-form-field>
-            <input placeholder="password" formControlName="password" matInput type="password">
-          </mat-form-field>
+      <div class="formbg-outer">
+        <div class="formbg">
+          <div class="formbg-inner padding-horizontal--48">
+            <span class="padding-bottom--15">Sign up to your account</span>
+            <!-- Begin Form -->
+            <form id="stripe-login" [formGroup]="form" (ngSubmit)="register($event)">
+              <div class="field padding-bottom--24">
+                <label for="email">Email</label>
+                <input formControlName="email" type="email">
+              </div>
+              <div class="field padding-bottom--24">
+                <div class="grid--50-50">
+                  <label for="password">Password</label>
+                </div>
+                <input formControlName="password" type="password">
+              </div>
+              <div class="field padding-bottom--24">
+                <button [disabled]="form.invalid" mat-raised-button color="primary" type="submit">Registro</button>
+              </div>
+            </form>
+            <!-- End Form -->
+          </div>
         </div>
+        <!-- Begin Footer -->
+        <div class="footer-link padding-top--24">
+          <span>Don't have an account? <a routerLink="/admin/products">Sign In</a></span>
+          <div class="listing padding-top--24 padding-bottom--24 flex-flex center-center">
+            <span><a href="#">© Sharmy</a></span>
+            <span><a href="#">Contact</a></span>
+            <span><a href="#">Privacy & terms</a></span>
+          </div>
+        </div>
+         <!-- End Footer -->
       </div>
-    </mat-card-content>
-    <mat-card-actions>
-      <button [disabled]="form.invalid" mat-raised-button type="submit">Registro</button>
-    </mat-card-actions>
-  </mat-card>
-  
-</form>
+    </div>
+  </div>
+</div>
