--- a/src/app/order/components/order/order.component.html
+++ b/src/app/order/components/order/order.component.html
@@ -1,38 +1,85 @@
-<mat-horizontal-stepper>
+<mat-horizontal-stepper class="stepper">
+  <!-- Cart of products -->
   <mat-step>
     <ng-template matStepLabel>Sus productos</ng-template>
-    <div *ngIf="(products$ | async) as products">
-      <p *ngIf="products.length === 0">no hay productos</p>
-      <div class="row" *ngFor="let product of products">
-        <div class="col-xs-12 col-sm-2 col-md-2">
-          <div class="box">
-            <img class="image" [src]="product.image" alt="">
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-5 col-md-5">
-          <div class="box">
-            {{ product.title }}
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-5 col-md-5">
-          <div class="box">
-            {{ product.price }}
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-3 col-md-3">
-          <div class="box">
-            TOTAL: <label> <b>({{ product | cartRepeat }})</b> </label>
-          </div>
-        </div>
+    <div class="container">
+      <div *ngIf="(products$ | async) as products">
+        <p *ngIf="products.length === 0" class="consult-prod"><b>No hay productos</b></p>
+        <table mat-table [dataSource]="products" class="mat-elevation-z8 products-table">
+          <ng-container matColumnDef="image">
+            <th mat-header-cell *matHeaderCellDef>IMAGE</th>
+            <td mat-cell *matCellDef="let product">
+              <img class="image" [src]="product.image" width="80" height="80">
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef>TITLE</th>
+            <td mat-cell *matCellDef="let product">{{product.title}}</td>
+          </ng-container>
+          <ng-container matColumnDef="price">
+            <th mat-header-cell *matHeaderCellDef>PRICE</th>
+            <td mat-cell *matCellDef="let product">{{product.price}}</td>
+          </ng-container>
+          <ng-container matColumnDef="catidad">
+            <th mat-header-cell *matHeaderCellDef>PRICE</th>
+            <td mat-cell *matCellDef="let product">{{product.price}}</td>
+          </ng-container>
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>ACTIONS</th>
+            <td mat-cell *matCellDef="let product">
+              <button mat-mini-fab color="warn" class="btn-cant">-</button>
+              <label><b> {{ product | cartRepeat }} </b> </label>
+              <button mat-mini-fab color="warn" class="btn-cant">+</button>
+            </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
       </div>
     </div>
   </mat-step>
-  <mat-step>
-    <ng-template matStepLabel>Datos personales</ng-template>
-    <h1>contenifo</h1>
+  <!-- Information Person -->
+  <mat-step [stepControl]="secondFormGroup">
+    <form [formGroup]="secondFormGroup">
+      <ng-template matStepLabel>Datos Personales</ng-template>
+      
+      <div class="row">
+        <div class="col-xs">
+          <mat-form-field>
+            <mat-label>Nombre</mat-label>
+            <input matInput formControlName="secondCtrl" required>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs">
+          <mat-form-field>
+            <mat-label>No. de Telefono</mat-label>
+            <input matInput formControlName="secondCtrl" required>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs">
+          <mat-form-field>
+            <mat-label>Email</mat-label>
+            <input matInput formControlName="secondCtrl" required>
+          </mat-form-field>
+        </div>
+      </div>
+    
+      <div>
+        <button mat-button matStepperPrevious>Back</button>
+        <button mat-button matStepperNext>Next</button>
+      </div>
+    </form>
   </mat-step>
+  <!-- Confirmation Order -->
   <mat-step>
     <ng-template matStepLabel>Pago</ng-template>
-    <h1>contenifo</h1>
+    <mat-radio-group aria-label="Selecione un método de pago">
+      <mat-radio-button value="1">Deposito Bancario</mat-radio-button>
+      <mat-radio-button value="2">Contra entrega</mat-radio-button>
+    </mat-radio-group>
   </mat-step>
 </mat-horizontal-stepper>
