--- a/src/app/product/components/products/products.component.html
+++ b/src/app/product/components/products/products.component.html
@@ -1,7 +1,32 @@
-<div class="product-grid">
-    <app-product 
-        *ngFor="let product of products" 
-        (productClicked)="clickProduct($event)" 
-        [product]="product">
-    </app-product>
-</div>
+<mat-tab-group class="container" color="primary" backgroundColor="primary">
+
+    <mat-tab label="Todos">
+        <div class="product-grid">
+            <app-product *ngFor="let product of products" (productClicked)="clickProduct($event)" [product]="product">
+            </app-product>
+        </div>
+    </mat-tab>
+
+    <mat-tab label="Second">
+        <div *ngFor="let product of products">
+            <div *ngIf="product.title === category2">
+                <div class="product-grid">
+                    <app-product (productClicked)="clickProduct($event)" [product]="product">
+                    </app-product>
+                </div>
+            </div>
+        </div>
+    </mat-tab>
+
+    <mat-tab label="Third">
+        <div *ngFor="let product of products">
+            <div *ngIf="product.title === category1">
+                <div class="product-grid">
+                    <app-product (productClicked)="clickProduct($event)" [product]="product">
+                    </app-product>
+                </div>
+            </div>
+        </div>
+    </mat-tab>
+
+</mat-tab-group>
