--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,17 +1,21 @@
 @import '~@angular/material/theming';
 
-$primary: mat-palette($mat-indigo);
+$primary: mat-palette($mat-pink, 800);
 
 footer {
   padding: 50px 0px;
   margin-top: 20px;
   background-color: mat-color($primary);
+  width: 100%;
   .box {
     h3 {
       color: white;
     }
     input{
       color: white;
+    }
+    button {
+      margin-right: 10px;
     }
     ul {
       list-style: none;
