Implements Firestore and design changes

--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,2 +1,12 @@
-
-<app-banner></app-banner>
+<div class="container">
+    <div class="side">
+        <p><b>¡Ropa en tendencia bajo Pedido!</b></p>
+        <p><b>Ingreso de pedidos de 15 - 20 días</b></p>
+        <ul>
+            <li>Envíos a toda Guatemala</li>
+            <li>Pedidos por DM</li>
+            <li>Facebook: Sharmy.gt</li>
+        </ul>
+    </div>
+    <app-banner></app-banner>
+</div>
