--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,6 +2,7 @@
     <mat-toolbar-row>
         <div class="row between-xs middle-xs header-row">
             <nav>
+                <img src="assets/images/logo.jpg" alt="" class="redondus">
                 <a mat-button routerLink="/home" routerLinkActive="active" color="basic">Home</a>
                 <a mat-button routerLink="/products" routerLinkActive="active" color="basic">Products</a>
                 <a mat-button routerLink="/contact" routerLinkActive="active" color="basic">Contact</a>
