--- a/src/app/contact/components/contact/contact.component.html
+++ b/src/app/contact/components/contact/contact.component.html
@@ -1,83 +1,62 @@
-<div class="login-root">
-  <div class="box-root flex-flex flex-direction--column" style="min-height: 100vh;flex-grow: 1;">
-    <!--<div class="loginbackground box-background--white padding-top--64">
-      <div class="loginbackground-gridContainer">
-        <div class="box-root flex-flex" style="grid-area: top / start / 8 / end;">
-          <div class="box-root"
-            style="background-image: linear-gradient(white 0%, rgb(247, 250, 252) 33%); flex-grow: 1;">
-          </div>
-        </div>
-        <div class="box-root flex-flex" style="grid-area: 4 / 2 / auto / 5;">
-          <div class="box-root box-divider--light-all-2 animationLeftRight tans3s" style="flex-grow: 1;"></div>
-        </div>
-        <div class="box-root flex-flex" style="grid-area: 6 / start / auto / 2;">
-          <div class="box-root box-background--blue800" style="flex-grow: 1;"></div>
-        </div>
-        <div class="box-root flex-flex" style="grid-area: 7 / start / auto / 4;">
-          <div class="box-root box-background--blue animationLeftRight" style="flex-grow: 1;"></div>
-        </div>
-        <div class="box-root flex-flex" style="grid-area: 8 / 4 / auto / 6;">
-          <div class="box-root box-background--gray100 animationLeftRight tans3s" style="flex-grow: 1;"></div>
-        </div>
-        <div class="box-root flex-flex" style="grid-area: 2 / 15 / auto / end;">
-          <div class="box-root box-background--cyan200 animationRightLeft tans4s" style="flex-grow: 1;"></div>
-        </div>
-        <div class="box-root flex-flex" style="grid-area: 3 / 14 / auto / end;">
-          <div class="box-root box-background--blue animationRightLeft" style="flex-grow: 1;"></div>
-        </div>
-        <div class="box-root flex-flex" style="grid-area: 4 / 17 / auto / 20;">
-          <div class="box-root box-background--gray100 animationRightLeft tans4s" style="flex-grow: 1;"></div>
-        </div>
-        <div class="box-root flex-flex" style="grid-area: 5 / 14 / auto / 17;">
-          <div class="box-root box-divider--light-all-2 animationRightLeft tans3s" style="flex-grow: 1;"></div>
-        </div>
-      </div>
-    </div>-->
-    <div class="box-root padding-top--24 flex-flex flex-direction--column" style="flex-grow: 1; z-index: 9;">
-      <div class="box-root padding-top--48 padding-bottom--24 flex-flex flex-justifyContent--center">
-        <h1><a href="http://blogs.stackfindover.com/" rel="dofollow">Stackfindover</a></h1>
-      </div>
-      <div class="formbg-outer">
-        <div class="formbg">
-          <div class="formbg-inner padding-horizontal--48">
-            <span class="padding-bottom--15">Sign in to your account</span>
-            <form id="stripe-login">
-              <div class="field padding-bottom--24">
-                <label for="email">Email</label>
-                <input type="email" name="email">
-              </div>
-              <div class="field padding-bottom--24">
-                <div class="grid--50-50">
-                  <label for="password">Password</label>
-                  <div class="reset-pass">
-                    <a href="#">Forgot your password?</a>
-                  </div>
-                </div>
-                <input type="password" name="password">
-              </div>
-              <div class="field field-checkbox padding-bottom--24 flex-flex align-center">
-                <label for="checkbox">
-                  <input type="checkbox" name="checkbox"> Stay signed in for a week
-                </label>
-              </div>
-              <div class="field padding-bottom--24">
-                <input type="submit" name="submit" value="Continue">
-              </div>
-              <div class="field">
-                <a class="ssolink" href="#">Use single sign-on (Google) instead</a>
-              </div>
-            </form>
-          </div>
-        </div>
-        <div class="footer-link padding-top--24">
-          <span>Don't have an account? <a href="">Sign up</a></span>
-          <div class="listing padding-top--24 padding-bottom--24 flex-flex center-center">
-            <span><a href="#">© Stackfindover</a></span>
-            <span><a href="#">Contact</a></span>
-            <span><a href="#">Privacy & terms</a></span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<div class="background">
+  <div class="container">
+      <div class="screen">
+	        <div class="screen-header">
+			        <div class="screen-header-left">
+					          <div class="screen-header-button close"></div>
+							            <div class="screen-header-button maximize"></div>
+										          <div class="screen-header-button minimize"></div>
+												          </div>
+														          <div class="screen-header-right">
+																            <div class="screen-header-ellipsis"></div>
+																			          <div class="screen-header-ellipsis"></div>
+																					            <div class="screen-header-ellipsis"></div>
+																								        </div>
+																										      </div>
+																											        <div class="screen-body">
+																													        <div class="screen-body-item left">
+																															          <div class="app-title">
+																																	              <span>CONTACT</span>
+																																				              <span>US</span>
+																																							            </div>
+																																										          <div class="app-contact">CONTACT INFO : +62 81 314 928 595</div>
+																																												          </div>
+																																														          <div class="screen-body-item">
+																																																            <div class="app-form">
+																																																			            <div class="app-form-group">
+																																																						              <input class="app-form-control" placeholder="NAME" value="Krisantus Wanandi">
+																																																									              </div>
+																																																												              <div class="app-form-group">
+																																																															                <input class="app-form-control" placeholder="EMAIL">
+																																																																			            </div>
+																																																																						            <div class="app-form-group">
+																																																																									              <input class="app-form-control" placeholder="CONTACT NO">
+																																																																												              </div>
+																																																																															              <div class="app-form-group message">
+																																																																																		                <input class="app-form-control" placeholder="MESSAGE">
+																																																																																						            </div>
+																																																																																									            <div class="app-form-group buttons">
+																																																																																												              <button class="app-form-button">CANCEL</button>
+																																																																																															                <button class="app-form-button">SEND</button>
+																																																																																																			            </div>
+																																																																																																						          </div>
+																																																																																																								          </div>
+																																																																																																										        </div>
+																																																																																																												    </div>
+																																																																																																													    <div class="credits">
+																																																																																																														      inspired by
+																																																																																																															        <a class="credits-link" href="https://dribbble.com/shots/2666271-Contact" target="_blank">
+																																																																																																																	        <svg class="dribbble" viewBox="0 0 200 200">
+																																																																																																																			          <g stroke="#ffffff" fill="none">
+																																																																																																																					              <circle cx="100" cy="100" r="90" stroke-width="20"></circle>
+																																																																																																																								              <path d="M62.737004,13.7923523 C105.08055,51.0454853 135.018754,126.906957 141.768278,182.963345" stroke-width="20"></path>
+																																																																																																																											              <path d="M10.3787186,87.7261455 C41.7092324,90.9577894 125.850356,86.5317271 163.474536,38.7920951" stroke-width="20"></path>
+																																																																																																																														              <path d="M41.3611549,163.928627 C62.9207607,117.659048 137.020642,86.7137169 189.041451,107.858103" stroke-width="20"></path>
+																																																																																																																																	            </g>
+																																																																																																																																				        </svg>
+																																																																																																																																						        Gururaj
+																																																																																																																																								      </a>
+																																																																																																																																									      </div>
+																																																																																																																																										    </div>
+																																																																																																																																											</div>
+
