--- a/src/app/contact/components/contact/contact.component.scss
+++ b/src/app/contact/components/contact/contact.component.scss
@@ -1,216 +1,236 @@
-h1 {
-  letter-spacing: -1px;
-}
-a {
-  color: #5469d4;
-  text-decoration: unset;
-}
-.login-root {
-  background: #fff;
-  display: flex;
-  width: 100%;
-  min-height: 100vh;
-  overflow: hidden;
-}
-/*.loginbackground {
-  min-height: 692px;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top: 0;
-  z-index: 0;
-  overflow: hidden;
-}*/
-.flex-flex {
-  display: flex;
-}
-.align-center {
-  align-items: center;
-}
-.center-center {
-  align-items: center;
-  justify-content: center;
-}
-.box-root {
+*, *:before, *:after {
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-.flex-direction--column {
-  -ms-flex-direction: column;
+
+body {
+  background: linear-gradient(to right, #ea1d6f 0%, #eb466b 100%);
+  font-size: 12px;
+}
+
+body, button, input {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  letter-spacing: 1.4px;
+}
+
+.background {
+  display: flex;
+  min-height: 100vh;
+}
+
+.container {
+  flex: 0 1 700px;
+  margin: auto;
+  padding: 10px;
+}
+
+.screen {
+  position: relative;
+  background: #3e3e3e;
+  border-radius: 15px;
+}
+
+.screen:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 20px;
+  right: 20px;
+  bottom: 0;
+  border-radius: 15px;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, .4);
+  z-index: -1;
+}
+
+.screen-header {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  background: #4d4d4f;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.screen-header-left {
+  margin-right: auto;
+}
+
+.screen-header-button {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  margin-right: 3px;
+  border-radius: 8px;
+  background: white;
+}
+
+.screen-header-button.close {
+  background: #ed1c6f;
+}
+
+.screen-header-button.maximize {
+  background: #e8e925;
+}
+
+.screen-header-button.minimize {
+  background: #74c54f;
+}
+
+.screen-header-right {
+  display: flex;
+}
+
+.screen-header-ellipsis {
+  width: 3px;
+  height: 3px;
+  margin-left: 2px;
+  border-radius: 8px;
+  background: #999;
+}
+
+.screen-body {
+  display: flex;
+}
+
+.screen-body-item {
+  flex: 1;
+  padding: 50px;
+}
+
+.screen-body-item.left {
+  display: flex;
   flex-direction: column;
 }
 
-.box-divider--light-all-2 {
-  box-shadow: inset 0 0 0 2px #e3e8ee;
-}
-.box-background--blue {
-  background-color: #5469d4;
-}
-.box-background--white {
-  background-color: #ffffff;
-}
-.box-background--blue800 {
-  background-color: #212d63;
-}
-.box-background--gray100 {
-  background-color: #e3e8ee;
-}
-.box-background--cyan200 {
-  background-color: #7fd3ed;
-}
-.padding-top--64 {
-  padding-top: 64px;
-}
-.padding-top--24 {
-  padding-top: 24px;
-}
-.padding-top--48 {
-  padding-top: 48px;
-}
-.padding-bottom--24 {
-  padding-bottom: 24px;
-}
-.padding-horizontal--48 {
-  padding: 48px;
-}
-.padding-bottom--15 {
-  padding-bottom: 15px;
+.app-title {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  color: #ea1d6f;
+  font-size: 26px;
 }
 
-.flex-justifyContent--center {
-  -ms-flex-pack: center;
-  justify-content: center;
+.app-title:after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  width: 25px;
+  height: 4px;
+  background: #ea1d6f;
 }
 
-.formbg {
-  margin: 0px auto;
-  width: 100%;
-  max-width: 448px;
-  background: white;
-  border-radius: 4px;
-  box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
+.app-contact {
+  margin-top: auto;
+  font-size: 8px;
+  color: #888;
 }
-span {
-  display: block;
-  font-size: 20px;
-  line-height: 28px;
-  color: #1a1f36;
+
+.app-form-group {
+  margin-bottom: 15px;
 }
-label {
-  margin-bottom: 10px;
+
+.app-form-group.message {
+  margin-top: 40px;
 }
-.reset-pass a,
-label {
-  font-size: 14px;
-  font-weight: 600;
-  display: block;
-}
-.reset-pass > a {
+
+.app-form-group.buttons {
+  margin-bottom: 0;
   text-align: right;
-  margin-bottom: 10px;
-}
-.grid--50-50 {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  align-items: center;
 }
 
-.field input {
-  font-size: 16px;
-  line-height: 28px;
-  padding: 8px 16px;
+.app-form-control {
   width: 100%;
-  min-height: 44px;
-  border: unset;
-  border-radius: 4px;
-  outline-color: rgb(84 105 212 / 0.5);
-  background-color: rgb(255, 255, 255);
-  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
-    rgba(60, 66, 87, 0.16) 0px 0px 0px 1px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
-    rgba(0, 0, 0, 0) 0px 0px 0px 0px;
+  padding: 10px 0;
+  background: none;
+  border: none;
+  border-bottom: 1px solid #666;
+  color: #ddd;
+  font-size: 14px;
+  text-transform: uppercase;
+  outline: none;
+  transition: border-color .2s;
 }
 
-input[type="submit"] {
-  background-color: rgb(84, 105, 212);
-  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.12) 0px 1px 1px 0px,
-    rgb(84, 105, 212) 0px 0px 0px 1px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
-    rgba(60, 66, 87, 0.08) 0px 2px 5px 0px;
-  color: #fff;
-  font-weight: 600;
+.app-form-control::placeholder {
+  color: #666;
+}
+
+.app-form-control:focus {
+  border-bottom-color: #ddd;
+}
+
+.app-form-button {
+  background: none;
+  border: none;
+  color: #ea1d6f;
+  font-size: 14px;
   cursor: pointer;
+  outline: none;
 }
-.field-checkbox input {
-  width: 20px;
-  height: 15px;
-  margin-right: 5px;
-  box-shadow: unset;
-  min-height: unset;
+
+.app-form-button:hover {
+  color: #b9134f;
 }
-.field-checkbox label {
+
+.credits {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  color: #ffa4bd;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+}
+
+.credits-link {
   display: flex;
   align-items: center;
-  margin: 0;
-}
-a.ssolink {
-  display: block;
-  text-align: center;
-  font-weight: 600;
-}
-.footer-link span {
-  font-size: 14px;
-  text-align: center;
-}
-.listing a {
-  color: #697386;
-  font-weight: 600;
-  margin: 0 10px;
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
 }
 
-.animationRightLeft {
-  animation: animationRightLeft 2s ease-in-out infinite;
-}
-.animationLeftRight {
-  animation: animationLeftRight 2s ease-in-out infinite;
-}
-.tans3s {
-  animation: animationLeftRight 3s ease-in-out infinite;
-}
-.tans4s {
-  animation: animationLeftRight 4s ease-in-out infinite;
+.dribbble {
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
 }
 
-@keyframes animationLeftRight {
-  0% {
-    transform: translateX(0px);
+@media screen and (max-width: 520px) {
+  .screen-body {
+    flex-direction: column;
   }
-  50% {
-    transform: translateX(1000px);
+
+  .screen-body-item.left {
+    margin-bottom: 30px;
   }
-  100% {
-    transform: translateX(0px);
+
+  .app-title {
+    flex-direction: row;
+  }
+
+  .app-title span {
+    margin-right: 12px;
+  }
+
+  .app-title:after {
+    display: none;
   }
 }
 
-@keyframes animationRightLeft {
-  0% {
-    transform: translateX(0px);
+@media screen and (max-width: 600px) {
+  .screen-body {
+    padding: 40px;
   }
-  50% {
-    transform: translateX(-1000px);
-  }
-  100% {
-    transform: translateX(0px);
+
+  .screen-body-item {
+    padding: 0;
   }
 }
 
-/* .loginbackground-gridContainer {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: [start] 1fr [left-gutter] (86.6px)[16] [left-gutter] 1fr [end];
-    grid-template-columns: [start] 1fr [left-gutter] repeat(16,86.6px) [left-gutter] 1fr [end];
-    -ms-grid-rows: [top] 1fr [top-gutter] (64px)[8] [bottom-gutter] 1fr [bottom];
-    grid-template-rows: [top] 1fr [top-gutter] repeat(8,64px) [bottom-gutter] 1fr [bottom];
-    justify-content: center;
-    margin: 0 -2%;
-    transform: rotate(-12deg) skew(-12deg);
-}*/
