--- a/src/app/order/components/order/order.component.html
+++ b/src/app/order/components/order/order.component.html
@@ -2,47 +2,51 @@
   <!-- Cart of products -->
   <mat-step>
     <ng-template matStepLabel>Sus productos</ng-template>
-    <div class="container">
-      <div *ngIf="(products$ | async) as products">
-        <p *ngIf="products.length === 0" class="consult-prod"><b>No hay productos</b></p>
-        <table mat-table [dataSource]="products" class="mat-elevation-z8 products-table">
-          <ng-container matColumnDef="image">
-            <th mat-header-cell *matHeaderCellDef>IMAGE</th>
-            <td mat-cell *matCellDef="let product">
-              <img class="image" [src]="product.image" width="80" height="80">
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef>TITLE</th>
-            <td mat-cell *matCellDef="let product">{{product.title}}</td>
-          </ng-container>
-          <ng-container matColumnDef="price">
-            <th mat-header-cell *matHeaderCellDef>PRICE</th>
-            <td mat-cell *matCellDef="let product">{{product.price}}</td>
-          </ng-container>
-          <ng-container matColumnDef="catidad">
-            <th mat-header-cell *matHeaderCellDef>PRICE</th>
-            <td mat-cell *matCellDef="let product">{{product.price}}</td>
-          </ng-container>
-          <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef>ACTIONS</th>
-            <td mat-cell *matCellDef="let product">
-              <button mat-mini-fab color="warn" class="btn-cant">-</button>
-              <label><b> {{ product | cartRepeat }} </b> </label>
-              <button mat-mini-fab color="warn" class="btn-cant">+</button>
-            </td>
-          </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-      </div>
+    <div *ngIf="(products$ | async) as products">
+      <p *ngIf="products.length === 0" class="consult-prod"><b>No hay productos</b></p>
+      <table mat-table [dataSource]="products" class="mat-elevation-z8 products-table">.
+        <ng-container matColumnDef="image">
+          <th mat-header-cell *matHeaderCellDef>Image</th>
+          <td mat-cell *matCellDef="let product">
+            <img class="image" [src]="product.image" width="80" height="80">
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef>Title</th>
+          <td mat-cell *matCellDef="let product">{{product.title}}</td>
+        </ng-container>
+        <ng-container matColumnDef="price">
+          <th mat-header-cell *matHeaderCellDef>price</th>
+          <td mat-cell *matCellDef="let product">{{product.price | currency: 'Q '}}</td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Actions</th>
+          <td mat-cell *matCellDef="let product">
+            <button mat-mini-fab color="warn" class="btn-cant">-</button>
+            <label><b> {{ product.cant }} </b> </label>
+            <button mat-mini-fab color="warn" class="btn-cant">+</button>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="total">
+          <th mat-header-cell *matHeaderCellDef>Total</th>
+          <td mat-cell *matCellDef="let product">
+            {{product.price * product.cant | currency: 'Q '}}
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
     </div>
+    <mat-list>
+      <mat-list-item>Total de compra: {{total}} </mat-list-item>
+      <mat-divider></mat-divider>
+    </mat-list>
   </mat-step>
   <!-- Information Person -->
   <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup">
       <ng-template matStepLabel>Datos Personales</ng-template>
-      
+
       <div class="row">
         <div class="col-xs">
           <mat-form-field>
@@ -67,7 +71,7 @@
           </mat-form-field>
         </div>
       </div>
-    
+
       <div>
         <button mat-button matStepperPrevious>Back</button>
         <button mat-button matStepperNext>Next</button>
