--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -11,3 +11,16 @@ nav > a.active {
 .header-row {
     width: 100%;
 }
+
+.redondus{
+    border-radius: 100%;
+    height: 50px;
+    width: 50px;
+    margin: 0 20px;
+}
+
+nav{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
