--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,13 @@
         padding-left: 16px;
     }
 }
+// @media (max-width: 1024px)  {
+//     .product-grid {
+//         grid-template-columns: repeat(3, 1fr);
+//     }
+//     .container{
+//         max-width: 1100px;
+//     }
+// }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
