--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -6,9 +6,9 @@
     <div class="crop-image">
         <img [src]="product.image" alt="">
     </div>
-    <mat-card-content>
+    <!-- <mat-card-content>
         <p>{{product.description | slice: 0:10}}</p>
-    </mat-card-content>
+    </mat-card-content> -->
     <mat-card-actions>
         <button mat-raised-button color="primary" (click)="addCart()">Agregar al carrito</button>
         <a mat-raised-button [routerLink]="['/products', product.id]">Ver detalles</a>
