--- a/src/app/contact/components/contact/contact.component.scss
+++ b/src/app/contact/components/contact/contact.component.scss
@@ -1,15 +1,15 @@
-*, *:before, *:after {
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+// *, *:before, *:after {
+//   box-sizing: border-box;
+//   -webkit-font-smoothing: antialiased;
+//   -moz-osx-font-smoothing: grayscale;
+// }
 
-body {
-  background: linear-gradient(to right, #ea1d6f 0%, #eb466b 100%);
-  font-size: 12px;
-}
+// body {
+//   background: linear-gradient(to right, #ea1d6f 0%, #eb466b 100%);
+//   font-size: 12px;
+// }
 
-body, button, input {
+button, input {
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   letter-spacing: 1.4px;
@@ -17,7 +17,7 @@ body, button, input {
 
 .background {
   display: flex;
-  min-height: 100vh;
+  // min-height: 100vh;
 }
 
 .container {
@@ -177,24 +177,6 @@ body, button, input {
   color: #b9134f;
 }
 
-.credits {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-  color: #ffa4bd;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 16px;
-  font-weight: normal;
-}
-
-.credits-link {
-  display: flex;
-  align-items: center;
-  color: #fff;
-  font-weight: bold;
-  text-decoration: none;
-}
 
 .dribbble {
   width: 20px;
