--- a/src/app/product/components/product-detail/product-detail.component.scss
+++ b/src/app/product/components/product-detail/product-detail.component.scss
@@ -1,15 +1,24 @@
-.crop-image {
-  display: block;
-  height: 300px;
-  width: 100%;
-  img {
-    object-fit: contain;
-    height: 100%;
-    width: 100%;
-    object-position: center;
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .crop-image {
+    display: block;
+    height: 300px;
+    width: 500px;
+    img {
+      object-fit: contain;
+      height: 100%;
+      width: 100%;
+      object-position: center;
+    }
+  }
+  .card {
+    .description{
+      margin: 20px;
+    }
   }
 }
-
 .back-w {
   background-color: #fff;
   color: black;
@@ -21,6 +30,6 @@
   display: flex;
   flex-direction: row;
 }
-.container-btn{
+.container-btn {
   margin: 30px 0;
 }
