--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,7 +8,7 @@
                 <a mat-button routerLink="/contact" routerLinkActive="active" color="basic">Contact</a>
             </nav>
             <a routerLink="/order" mat-raised-button [matBadge]="total$ | async" matBadgeColor="warn">
-                <mat-icon>shopping_cart</mat-icon>
+                <mat-icon>storefront</mat-icon>
                 Carrito
             </a>
         </div>
